# DBS-OCP

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
doc/: bianca_install.rst  knowledge.md
src/dbsocp/: Snakefile  __main__.py  config.schema.yaml  dbsocp.yaml  multiqc_config.yaml  utils.py
src/dbsocp/cli/: config.py  getfrags.py  init.py  mergedups.py  run.py  tagfastq.py
src/dbsocp/rules/: trim_v1.smk  trim_v2.smk
src/dbsopc/: Snakefile  __main__.py  config.schema.yaml  dbsopc.yaml  multiqc_config.yaml  snaptools_env.yaml  utils.py
src/dbsopc/cli/: config.py  init.py  run.py  tagfastq.py
tests/: test_cli.py
tests/testdata/: Snakefile  ref.fasta.amb  ref.fasta.ann  ref.fasta.bwt  ref.fasta.fai  ref.fasta.pac  ref.fasta.sa
