[metadata]
name = dbsocp
author = Pontus Höjer
url = https://github.com/AfshinLab/DBS-OCP
description = DBS for Open Chromatin Profiling in single nucleii
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires >= 3.8,
install_requires =
    dnaio
    tqdm
    snakemake
    importlib_resources
    scipy
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
dbsocp =
    Snakefile
    config.schema.yaml
    dbsocp.yaml
    multiqc_config.yaml

[options.entry_points]
console_scripts =
    dbsocp = dbsocp.__main__:main

[options.extras_require]
dev = 
    flake8,
    black,

[flake8]
max-line-length = 88
